# XML-Library

./: .gitignore  CMakeLists.txt
include/: libmy.h  my_lib_xml.h
include/libmy/: get_next_line.h  libmy.h
include/my_libxml/: my_lib_xml.h
lib/: a.out  get_next_line.c  my_atoi_to_char.c  my_clean_str.c  my_putchar.c  my_putstr.c  my_special_strdup.c  my_str_isnum.c  my_str_ncut.c  my_str_to_wordtab.c  my_strcat_char.c  my_strcmp.c  my_strdup.c  my_strerr.c  my_strlen.c  my_strncpy.c  my_strndup.c
my_libxml/: check_xml_structure.c  get_xml_infos.c  my_strerr.c  parse_xml_file.c
